Tried fixing whitespace error

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,6 @@
 .App {
   text-align: center;
   height: 100%;
-  overflow: hidden;
 }
 
 .App-logo {
@@ -33,13 +32,13 @@
 
 .App-header {
   background-color: #F7F9FB;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  border: solid green 5px;
 }
 
 .App-link {
@@ -87,7 +86,6 @@
 @media only screen and (max-width: 1024px){
   .bigPawTrack {
     width: 100%;
-    overflow: hidden;
   }
 
   .mainContent{
